Added Filter Tool: All, Completed, Uncompleted

--- a/style.css
+++ b/style.css
@@ -100,6 +100,44 @@ form button:hover {
   opacity: 0;
 }
 
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: none;
+  border: none;
+}
+
+.select {
+  margin: 1rem;
+  position: relative;
+  overflow: hidden;
+}
+
+select {
+  color: rgb(119, 39, 224);
+  width: 10rem;
+  cursor: pointer;
+  padding: 1rem;
+}
+
+.select::after {
+  content: '\25BC';
+  position: absolute;
+  background: rgb(119, 39, 224);
+  top: 0;
+  right: 0;
+  padding: 1rem;
+
+  pointer-events: none;
+  transition: all ease 0.3s;
+}
+
+.select:hover::after {
+  background: white;
+  color: rgb(119, 39, 224);
+}
+
 .version {
   display: flex;
   justify-content: center;
